<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Notes App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="notes_app">NOTES APP</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="please_signing_to_continue">Please signin to continue</string>
    <string name="welcome_to">Welcome to</string>
    <string name="default_web_client_id" translatable="false">YOUR_WEB_CLIENT_ID</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="done">Done</string>
    <string name="edit_your_note" tools:ignore="TypographyEllipsis">Edit your note...</string>
    <string name="write_a_note" tools:ignore="TypographyEllipsis">Write a note...</string>
    <string name="welcome">Welcome,</string>
    <string name="sampleUserName">John Doe</string>
    <string name="addbtnDesc">Add</string>
    <string name="logoutBtnDesc">Logout</string>
    <string name="update_noteBtnDesc">Update Note</string>
    <string name="delete_noteBtnDesc">delete note</string>
</resources>