<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".fragments.LoginFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-8dp"
            android:fontFamily="@font/inter"
            android:text="@string/welcome_to"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/welcome2"
            app:layout_constraintStart_toStartOf="@+id/welcome2" />

        <TextView
            android:id="@+id/welcome2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/notes_app"
            android:textColor="@color/white"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/inter"
            android:text="@string/please_signing_to_continue"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/signin_btn"
            app:layout_constraintStart_toStartOf="@+id/signin_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signin_btn"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/continue_with_google"
            android:textSize="16sp"
            app:backgroundTint="#E54900"
            app:cornerRadius="12dp"
            app:icon="@drawable/google"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>